--- a/templates/openstack.yaml.j2
+++ b/templates/openstack.yaml.j2
@@ -5,5 +5,5 @@ clouds:
       username: admin
       password: {{ os_password }}
       project_name: admin
-      auth_url: "http://{{ os_host }}:5000/v2.0"
+      auth_url: http://{{ os_host }}:5000/v2.0
     validate_certs: no
