--- a/templates/openstack.yaml.ssl.j2
+++ b/templates/openstack.yaml.ssl.j2
@@ -2,7 +2,7 @@ clouds:
   mycloud:
     region_name: RegionOne
     auth:
-      username: admin
+      username: {{ os_user }}
       password: {{ os_password }}
       project_name: admin
       auth_url: https://{{ os_host }}:5001/v2.0
